tests/ui/feature-gates/feature-gate-ffi_const.stderr
error[E0658]: the `#[ffi_const]` attribute is an experimental feature
  --> $DIR/feature-gate-ffi_const.rs:4:5
   |
LL |     #[ffi_const]
   |     ^^^^^^^^^^^^
   |
   = note: see issue #58328 <https://github.com/crablang/crablang/issues/58328> for more information
   = help: add `#![feature(ffi_const)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
